--- a/src/index.css
+++ b/src/index.css
@@ -222,6 +222,8 @@ footer a:focus {
 .profile__logout{
   color: gray;
   font-size: 14px;
+  cursor: pointer;
+  text-decoration: underline;
 }
 
 .profile__logout:hover,
