--- a/src/index.css
+++ b/src/index.css
@@ -132,6 +132,10 @@ footer a:focus {
   font-size: 16px;
 }
 
+.post__text--pre-wrap {
+  white-space: pre-wrap;
+}
+
 .post__utils-box {
   display: flex;
   flex-direction: row-reverse;
