--- a/src/index.css
+++ b/src/index.css
@@ -194,6 +194,15 @@ footer a:focus {
   padding : 20px 0px;
 }
 
+.post__category {
+  color: gray;
+  border: 1px solid lightgray;
+  background: #f2f2f2;
+  padding: 0px 4px;
+  border-radius: 10px;
+  font-size: 12px;
+}
+
 /* profile box */
 
 .profile__box {
@@ -457,6 +466,14 @@ input:checked + .carousel__slide-container .nav label {
 
 .form__error {
   color: red;
+}
+
+.form select {
+  border: 1px solid lightgray;
+  max-width: 680px;
+  height: 40px;
+  padding: 0 20px;
+  border-radius: 0.3rem;
 }
 
 /* loader */
