--- a/src/index.css
+++ b/src/index.css
@@ -520,6 +520,9 @@ input:checked + .carousel__slide-container .nav label {
   display: block;
   width: 100%;
   max-width: 680px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .comments__form .form__block {
